--- a/dark-theme.css
+++ b/dark-theme.css
@@ -6,6 +6,12 @@ body {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
       url(/images/back2.jpg);
+background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+  min-width: 100%;
   }
   .input-field input[type="text"],
   .input-field label {
